Changes in 1.0.11 (2010-mm-dd):
• Added a Dutch translation by Dennis Morren.
• Full changelog now shipped with AppBackup and shown in the About dialog.
• Permissions on /var/mobile/Library/Preferences/AppBackup are now fixed on startup to reduce crashes
   · This is done with a setuid binary called FixPermissions and can be disabled by making an empty file at /Applications/AppBackup.app/NoFixPermissions
• Source changes:
   · Setuid binary called FixPermissions added to fix permissions on startup.
   · PermissionsFix is now FixPermissions.old and is deprecated.
   · Changes related to Python naming conventions and docstrings in include/globals.py.
   · Source tree reorganized, changes and credits reorganized, and build process changed.
   · README and LICENSE files added.
   · Trivial changes.
TODO: Add license to UI
TODO: Add Retina icon (and maybe Default.png too?)

Changes in 1.0.10 (2010-08-03):
• Added an Italian translation by Pietropaolo Mastromarco.
• Fixed a bug where the restore option didn't appear if we couldn't get a localized date string from the operating system, even though the app was backed up already.
• (Only of interest to developers) Sorted the functions in include/globals.py alphabetically, except for a couple of long ones which were left at the bottom.

Changes in 1.0.9.9 (2010-06-10):
• Added a Spanish translation by Ramón Cutanda.
• Changed the debug logging method again.
• Threads now have autorelease pools.
• This version is mainly intended to help me figure out crashing problems that people are having, although the above change might help some.

Changes in 1.0.9.2 (2010-01-14):
• Fixed another problem when upgrading to 1.0.7 or later from 1.0.6 or earlier.

Changes in 1.0.9.1 (2010-01-13):
• AppBackup no longer crashes on a new install.
• Fixed complications when upgrading to 1.0.7 or later from 1.0.6 or earlier.

Changes in 1.0.9 (2010-01-11):
• Attempted to fix AppBackup crashing on new installs.

Changes in 1.0.8: