@@ -14,10 +14,11 @@ I would like to thank the following people who paid me lots of money to see thei
 • Marc Klein for the French translation.
 • Chris Zander for the German translation.
 • Pietropaolo Mastromarco for the Italian translation.
+• Nikita "ZAY" Peshkov for the Russian translation.
 • Ramón Cutanda for the Spanish translation.
 • Magnus Pålsson for the Swedish translation.
 • Everyone who has sent me bug reports!
 
 Tango icons are © Tango Desktop Project and are released under the Creative Commons Attribution Share-Alike license.
 
-If you want to help translate AppBackup into a different language, please contact me at <iphone@srwz.us>.  Currently, it supports English, Dutch, French, German, Italian, Spanish, and Swedish.
+If you want to help translate AppBackup into a different language, please contact me at <iphone@srwz.us>.  Currently, it supports English, Dutch, French, German, Italian, Russian, Spanish, and Swedish.
