@@ -5,7 +5,7 @@ chmod u+s /Applications/AppBackup.app/FixPermissions
 
 echo ""
 echo "If you have any problems with AppBackup, please contact the author, Scott Wallace, by going to"
-echo "  <http://www.scott-wallace.net/contact>"
+echo "  <http://pages.srwz.us/contact>"
 echo "on your computer.  Please be sure to attach this file:"
 echo "  /var/mobile/Library/Preferences/AppBackup/debug.log"
 echo "and the last crash log starting with \"AppBackupPython\" in:"
