@@ -3,7 +3,7 @@ An iPhoneOS application that backs up and restores the saved data and
 preferences of App Store apps.
 
 Copyright (C) 2008-2010 Scott Wallace
-http://www.scott-wallace.net/iphone/appbackup
+http://pages.srwz.us/iphone/appbackup
 
 This is the source tree for AppBackup.  AppBackup is written in Python 2.5.
 
